--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 				<li class="main-list-item"><a href="#">Доставка и оплата</a></li>
 				<li class="main-list-item"><a href="#">О Компании</a></li>
 			</ul>
+			<button class="search-button"></button>
+			<div class="search-form">
 			<form class="user-panel" method="get">
             <input type="search" name="search" id="search" placeholder="Что ищем?">
             <label class="search-label" for="search"></label>
-          </form>
+            </form>
+      		</div>
           <a href="#" class="input">Вход</a>
           <a href="#" class="basket">Пусто</a>
 		</nav>
@@ -104,10 +107,10 @@
 		</div>
 		<div class="infoshop">
 			<h2>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-			<p class="shoptext">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-			<p class="shoptext">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-			<p class="shoptext">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-			<p class="shoptext">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+			<p class="shoptext text-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+			<p class="shoptext text-cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+			<p class="shoptext text-leaf">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+			<p class="shoptext text-thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 		</div>
 		<div class="container">
 		<div class="news">
